--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<input type="file" id="csv-file" name="files" (change)="handleFileSelect($event)"/>
+<router-outlet></router-outlet>
+<ngx-spinner></ngx-spinner>
